# symbol-walker

./: LICENSE  README.md  pyproject.toml
python_template/: __main__.py  src.py
symbol_walker/: __main__.py  command.py
tests/: test_hello.py
