[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "A short description of your project"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
keywords = ["template"]
packages = [{include = "python_template"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[tool.poetry.scripts]
your_command_name = "python_template:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"homepage" = "https://github.com/your-username/python-template"
"documentation" = "https://github.com/your-username/python-template/blob/main/README.md"
"source" = "https://github.com/your-username/python-template"
"tracker" = "https://github.com/your-username/python-template/issues"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py310']
